# vaultic

./: .gitignore  CHANGELOG.md  COMMERCIAL.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
docs/: CHANGELOG.es.md  COMMERCIAL.es.md  CONTRIBUTING.es.md  README.es.md  SECURITY.es.md  commands.es.md  commands.md  linkedin-article.md  phases.es.md  phases.md  roadmap.es.md  roadmap.md
docs/plans/: 2026-02-28-autoupdate-templates-design.md  2026-02-28-autoupdate-templates-plan.md
docs/superpowers/plans/: 2026-03-11-v1.3.0-secret-validation-health.md  2026-03-27-v1.4.0-ci-cd-integration.md
src/: main.rs
src/adapters/: mod.rs
src/adapters/audit/: json_audit_logger.rs  mod.rs
src/adapters/cipher/: age_backend.rs  gpg_backend.rs  mod.rs
src/adapters/git/: git_hook.rs  mod.rs
src/adapters/key_stores/: file_key_store.rs  mod.rs
src/adapters/parsers/: dotenv_parser.rs  mod.rs
src/adapters/updater/: github_updater.rs  mod.rs  verifier.rs
src/cli/: context.rs  mod.rs  output.rs
src/cli/commands/: audit_helpers.rs  check.rs  ci.rs  crypto_helpers.rs  decrypt.rs  diff.rs  encrypt.rs  hook.rs  init.rs  keys.rs  log.rs  mod.rs  resolve.rs  status.rs  template.rs  template_sync.rs  update.rs  validate.rs
src/config/: app_config.rs
src/core/: errors.rs
src/core/models/: audit_entry.rs  diff_result.rs  environment.rs  key_identity.rs  mod.rs  secret_file.rs  update_info.rs
src/core/services/: check_service.rs  diff_service.rs  encryption_service.rs  env_resolver.rs  key_service.rs  mod.rs  secret_age_service.rs  template_resolver.rs  template_sync_service.rs  validation_service.rs
src/core/traits/: audit.rs  cipher.rs  key_store.rs  mod.rs  parser.rs
tests/: audit_hook_test.rs  check_diff_test.rs  ci_test.rs  encrypt_decrypt_test.rs  resolve_test.rs  stdout_test.rs  template_sync_test.rs  template_test.rs  validate_test.rs
