[package]
name = "vaultic"
version = "1.4.1"
edition = "2024"
authors = ["Cristo Fernández Tomé (SoftDryzz)"]
description = "Secure your secrets. Sync your team. Trust your configs."
license = "AGPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/AXIOM-ZER0/vaultic"
documentation = "https://github.com/AXIOM-ZER0/vaultic#commands"
repository = "https://github.com/AXIOM-ZER0/vaultic"
keywords = ["env", "secrets", "encryption", "cli", "dotenv"]
categories = ["command-line-utilities", "cryptography"]
exclude = ["tests/", ".github/", "docs/"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }
colored = "2"
indicatif = "0.17"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Encryption
age = { version = "0.11", features = ["armor"] }

# Utilities
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
dirs = "6"
regex = "1"

# Auto-update
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
semver = "1"
minisign-verify = "0.2"
self-replace = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
assert_fs = "1"
age = { version = "0.11", features = ["armor"] }
secrecy = "0.10"
